--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,9 +1,76 @@
-@media (max-width: 991.98px){
-    
+@media (max-width: 992px){
+
+    .secao-com-texto{
+        padding: 153px 25px;
+    }
+
+    .secao-com-texto.onde-estamos p,
+    .secao-com-texto p{
+        width: 100%;
+    }
+
 }
-@media (max-width: 767.98px){
+@media (max-width: 768px){
+    .contato{
+        background-image: none;
+        background-color: #d3ae7d;
+    }
 
+    .contato .texto{
+        position: relative;
+        text-align: center;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
 
+    .contato h3{
+        margin-bottom: 46px;
+    }
+
+}
+
+@media (max-width: 720px){
+    .ladrilho .grande,
+    .ladrilho .medio{
+        width: 100%;
+    }
+
+    .ladrilho .pequeno,
+    .ladrilho .pequeno.grao{
+        width: 50%;
+    }
+
+    .rodape .logo{
+        display: block;
+    }
+
+    .rodape .logo{
+        display: block;
+        margin-bottom: 122px;
+    }
+
+    .rodape ul{
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 122px;
+    }
+
+    .rodape ul li{
+        display: block;
+        background-image: none;
+        background-color: black;
+    }
+
+    .rodape ul li a{
+        font-size: 2rem;
+    }
+
+    .rodape .redes-sociais{
+        float: none;
+        margin-bottom: 28px;
+    }
 }
 
 @media (max-width: 425px){
@@ -31,6 +98,20 @@
         font-size: 2.5rem;
     }
 
+    .secao-com-texto h2{
+        font-size: 3rem;
+    }
+
+    .secao-com-texto.onde-estamos p{
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 375px){
+    .ladrilho .pequeno,
+    .ladrilho .pequeno.grao{
+        width: 100%;
+    }
 }
 
 
